# ai-loyalty-service

./: .env.example  .gitignore  ARCHITECTURE.md  DATABASE_SETUP.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  IMPLEMENTATION_STATUS.txt  Makefile  OPERATIONS_GUIDE.md  README.md  REALTIME_IMPLEMENTATION.md  SEGMENT_QUERY_GUIDE.md  alembic.ini  docker-compose.yml  get_test_members.py  pyproject.toml  requirements.txt  sample_members.csv  sample_transactions.csv  seed_database.py  segment_queries.sh  test_segmentation.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260328_initial_schema.py
app/: celery_app.py  main.py  page.tsx
app/agents/: __init__.py  communication.py  decision_framework.py  graph.py  llm_factory.py  memory.py  orchestrator.py  state.py  tools.py
app/automation/: engine.py  rules.py
app/core/: auth.py  background.py  config.py  event_bus.py  event_queue.py  logging.py  middleware.py  redis.py  redis_client.py  supabase_client.py  telemetry.py  tenant.py  ws_manager.py
app/domain/: behavior.py  segment.py  tenant.py
app/engines/: behavior_engine.py
app/ml/: __init__.py  campaign_metrics_estimator.py  clustering.py  continuous_analyzer.py  embeddings.py  feature_engineering.py  rfm_engine.py  roi_prediction_model.py  segmentation_model.py
app/monitoring/: __init__.py  broadcaster.py  kpi_engine.py  (+5 more)
frontend/: README.md  eslint.config.js  index.html  package-lock.json  tailwind.config.ts
migrations/: 003_pgvector.sql  2026-02-06_add_tenant_id.sql  2026-02-06_update_rls_policies.sql
tests/: conftest.py  test_health.py
(+131 files in other folders)
