[tool.poetry]
name = "ai-loyalty-service"
version = "0.1.0"
description = "Agentic AI microservice for loyalty intelligence"
authors = ["Your Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.0"
pydantic = "^2.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = [
	"E501",
	"E402",
	"I001",
	"UP006",
	"UP035",
	"UP045",
	"F401",
	"F841",
	"W293",
	"W291",
	"W292",
	"F541",
	"F821",
	"B007",
	"B008",
	"B904",
	"B905",
]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
	"ignore:The `gotrue` package is deprecated.*:DeprecationWarning",
]
